tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_del4.qml
import QtQuick
Item {
    width: 100
    Rectangle {

}
